--- a/css/banner.css
+++ b/css/banner.css
@@ -10,6 +10,7 @@ div.banner div.banner__imagen img{
     background-color: var(--background-azul-claro);
     color: var(--font-white);
     border: 0;
+    margin-top: 1rem;
 }
 .banner__texto{
     position: absolute;  
@@ -26,6 +27,7 @@ div.banner div.banner__imagen img{
     font-size: 1.375rem;
     box-shadow: 5px 5px 40px;
     text-shadow: black 0.1em 0.1em 0.2em;
+    margin-top: 1rem;
     
 }
 
