--- a/css/contacto.css
+++ b/css/contacto.css
@@ -25,18 +25,21 @@ form label#contacto__titulo{
 }
 #nombre{
     background: var(--background-blanco);
+    
 }
 form input{
     width: 35rem;
     height: 2rem;
     border:none;
     margin-bottom: 1rem;
+    padding-left: 0.3rem;
 }
 textarea, #nombre{
     border: none;
     font-family: var(--relaway);
     font-size: 0.75rem;
     resize: none;
+    padding: 0.3rem;
 }
 button.boton__enviar{
     width: 9rem;
