Configuracion de responsividad

--- a/css/cabecera.css
+++ b/css/cabecera.css
@@ -1,48 +1,109 @@
-.cabecera{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-   
-    margin: 0 9.25rem;
+.cabecera {
+  display: flex;
+  flex-direction: row;
+  
+  margin: 0 9.25rem;
 }
-.cabecera__logo{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    
+.cabecera__contenedor {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
 }
-div.buscador{
-    margin: 2rem;
-    display: flex;
+.img-logo{
+ margin-top: 1rem;
 }
-input.buscador__texto{
-    width: 24.75rem;
-    background: var(--background-gris-claro);
-    color: var(--font-gris-oscuro);
-    border-radius: 1.25rem 0 0 1.25rem ;
-    padding: 0 1rem;
+div.buscador {
+  margin: 2rem;
+  display: flex;
 }
-button.buscar__boton{
-    cursor: pointer;
-    background: var(--background-gris-claro);
-    border-radius: 0 1.25rem 1.25rem 0;
+input.buscador__texto {
+  width: 21.75rem;
+  background: var(--background-gris-claro);
+  color: var(--font-gris-oscuro);
+  border-radius: 1.25rem 0 0 1.25rem;
+  padding: 0 0.7rem;
+}
+button.buscar__boton {
+  cursor: pointer;
+  background: var(--background-gris-claro);
+  border-radius: 0 1.25rem 1.25rem 0;
+  width: 3rem;
+  height: 2rem;
+  padding-right: 0.5rem;
 }
 
-input.buscador__texto, button.buscar__boton{
+input.buscador__texto,
+button.buscar__boton {
+  height: 2.5rem;
+  border: none;
+  outline: 0;
+  box-sizing: border-box;
+  font-size: 1rem;
+}
+.btn_login {
+  width: 11.375rem;
+  height: 3.188rem;
+  margin-top: 1.5rem;
+  border-color: var(--border-azul-claro);
+  color: var(--font-azul-claro);
+  cursor: pointer;
+}
+@media screen and (max-width: 1023px) {
+    .cabecera{
+        margin: 0 2rem;
+    }
+    .cabecera__contenedor .img-logo{
+        width: 7rem;
+        margin-top: 1rem;
+    }
+    .btn_login{
+        width: 10.375rem;
+        height: 2.5rem;
+    }
+    input.buscador__texto,
+    button.buscar__boton{
+       font-size: 0.875rem;
+
+    }
+
+    button.buscar__boton img{
+        width: 0.5rem;
+    }
+
+    input.buscador__texto {
+        width: 17rem;
+    }
+    button.buscar__boton{
+        width: 2rem;
+        padding: 0;
+    }
+}
+@media screen and (max-width: 767px) {
+  .cabecera{
+    margin: 0 1rem;
+    
+  }
+  section.cabecera div.buscador button.buscar__boton img{
+    width: 1.094rem;
+  }
+
+  input.buscador__texto{
+    display: none;
+  }
+  button.buscar__boton{
+    border-radius: 0rem;
+    background: transparent;
+  } 
+  .btn_login {
+    width: 8.313rem;
     height: 2.5rem;
-    border:none;
-    outline: 0;
-	box-sizing: border-box;
-	font-size: 1rem;
-    
-}
-.btn_login{
-    width: 11.375rem;
-    height: 3.188rem;
     margin-top: 1.5rem;
-    border-color: var(--border-azul-claro);
-   color: var(--font-azul-claro);
-   cursor: pointer;
+  }
+  .cabecera__contenedor{
+    flex-direction: row-reverse;
+    padding: 0 1rem;
+    justify-content: center;
+  }
+
+
 }
-
-
