--- a/css/banner.css
+++ b/css/banner.css
@@ -1,34 +1,59 @@
-div.banner div.banner__imagen img{
+div.banner div.banner__imagen img {
+  width: 100%;
+  height: 22rem;
+}
+
+.banner__texto {
+  position: absolute;
+  color: var(--font-white);
+  font-weight: 700;
+  margin: 9.375rem 9.25rem;
+}
+.banner__texto h2 {
+  font-size: 3.25rem;
+  text-shadow: black 0.1em 0.1em 0.2em;
+}
+.banner__texto p {
+  font-size: 1.375rem;
+  box-shadow: 5px 5px 40px;
+  text-shadow: black 0.1em 0.1em 0.2em;
+  margin-top: 1rem;
+}
+.banner__promocional___boton {
+  width: 8.063rem;
+  height: 3.188rem;
+  background-color: var(--background-azul-claro);
+  color: var(--font-white);
+  border: 0;
+  margin-top: 1rem;
+}
+
+@media screen and (max-width: 1023px) {
+  div.banner div.banner__imagen img {
     width: 100%;
-    height: 22rem;
-    
+    height: 18rem;
+  }
+  .banner__texto {
+    margin: 7.375rem 2rem;
+  }
 }
-
-.banner__promocional___boton{
-    width: 8.063rem;
-    height: 3.188rem;
-    background-color: var(--background-azul-claro);
-    color: var(--font-white);
-    border: 0;
+@media screen and (max-width: 767px) {
+  div.banner div.banner__imagen img {
+    width: 100%;
+    height: 11.5rem;
+  }
+  .banner__texto {
+    margin: 4.375rem 1rem;
+  }
+  .banner__texto h2 {
+    font-size: 1.625rem;
+  }
+  .banner__texto p {
+    font-size: 0.875rem;
+    margin: 0;
+  }
+  .banner__promocional___boton {
+    width: 7.375rem;
     margin-top: 1rem;
+  }
 }
-.banner__texto{
-    position: absolute;  
-    color: var(--font-white);
-    font-weight: 700;
-    margin: 9.375rem 9.25rem;
-    
-}
-.banner__texto h2{
-    font-size: 3.25rem;
-    text-shadow: black 0.1em 0.1em 0.2em;
-}
-.banner__texto p{
-    font-size: 1.375rem;
-    box-shadow: 5px 5px 40px;
-    text-shadow: black 0.1em 0.1em 0.2em;
-    margin-top: 1rem;
-    
-}
-
-
