--- a/css/cabecera.css
+++ b/css/cabecera.css
@@ -1,8 +1,8 @@
 .cabecera {
   display: flex;
   flex-direction: row;
-  
   margin: 0 9.25rem;
+  height: 7.125rem;
 }
 .cabecera__contenedor {
   display: flex;
@@ -95,14 +95,17 @@ button.buscar__boton {
     background: transparent;
   } 
   .btn_login {
-    width: 8.313rem;
+    width: 8rem;
     height: 2.5rem;
     margin-top: 1.5rem;
   }
   .cabecera__contenedor{
     flex-direction: row-reverse;
-    padding: 0 1rem;
     justify-content: center;
+  }
+  div.buscador {
+    margin: 1rem 0rem;
+    display: flex;
   }
 
 
