--- a/css/nuevo-producto.css
+++ b/css/nuevo-producto.css
@@ -9,8 +9,6 @@ div.nuevo-producto {
   flex-direction: column;
 }
 .bonton__agregar-nuevo {
-  display: flex;
-  flex-direction: ;
   margin-bottom: 5rem;
 }
 section.agregar-producto__contenedor h2.titulo {
@@ -23,4 +21,26 @@ section.agregar-producto__contenedor h2.titulo {
 
 #url-imagen:hover {
   cursor: pointer;
+}
+@media screen and (max-width: 1439px){
+    section.agregar-producto__contenedor{
+        margin: 0 18rem;
+    }
+    
+}
+@media screen and (max-width: 1024px){
+    section.agregar-producto__contenedor{
+        margin: 0 2rem;
+    }
+
+    h2.titulo{
+        font-size: 1.375rem;
+    }
+    
+}
+@media screen and (max-width: 767px){
+    section.agregar-producto__contenedor{
+        margin: 0 1rem;
+    }
+    
 }
